Implement csrf token in forms

--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -19,6 +19,7 @@
         </ul>
     {% endif %}
     <form class="ui form" action="{{path('updateUser')}}" method="post">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate_edit_user') }}" >
         <input type="hidden" name="id" value="{{ user.id }}">
         <div class="field">
             <label>Username:</label>
