--- a/templates/users/add.html.twig
+++ b/templates/users/add.html.twig
@@ -19,7 +19,7 @@
         </ul>
     {% endif %}
     <form class="ui form" action="{{path('insertUser')}}" method="post">
-
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate_add_user') }}" >
         <div class="field">
             <label>Username:</label>
             <input type="text" name="username">
